# rust-actix-example

./: .env.docker  .env.example  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md
migrations/2019-09-30-115154_create_users/: up.sql
migrations/2020-04-27-193614_add_user_salt/: down.sql  up.sql
src/: auth.rs  cache.rs  config.rs  database.rs  errors.rs  extractors.rs  helpers.rs  main.rs  routes.rs  schema.rs  server.rs  state.rs  utils.rs  validate.rs
src/handlers/: auth.rs  health.rs  mod.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/models/: user.rs
src/tests/: auth.rs  health.rs  helpers.rs  mod.rs  user.rs
static/: index.html  test.html  test.txt
static-secure/: index.html  test.html  test.txt
