[package]
name = "rust_actix_example"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-cors = "0.3"
actix-files = "0.3"
actix-identity = "0.3"
actix-redis = "0.9"
actix-rt = "1"
actix-service = "1.0.6"
actix-web = "3"
argon2rs = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
diesel = { version = "1.4.0", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }
dotenv = "0.14"
envy = "0.4"
env_logger = "0.6"
futures = "0.3.5"
jsonwebtoken = "7"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
rayon = "1.0"
redis-async = "0.6.3"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"

[dev-dependencies]
actix-http-test = "0.2.0"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["mysql"]
