[package]
name = "rust_actix_example"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2021"
rust-version = "1.68"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-cors = "0.6.4"
actix = "0.13.1"
actix-files = "0.6.2"
actix-identity = "0.6.0"
actix-session = {version = "0.8", features = ["cookie-session"] }
actix-redis = "0.13"
argon2rs = "0.2.1"

chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "2.1", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuid"] }
dotenv = "0.15"
envy = "0.4"
env_logger = "0.10"
futures = "0.3.1"
jsonwebtoken = "9"
lazy_static = "1.4"
listenfd = "1"
log = "0.4"
once_cell = "1"
rayon = "1.0"
redis-async = "0.16"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.16.0"
validator_derive = "0.16.0"

rust-argon2 = "2"

[dev-dependencies]
actix-http-test = "3.1"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["mysql"]